@@ -29,89 +29,90 @@ import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-
-import java.io.File;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-
-import org.jenkinsci.plugins.pipeline.utility.steps.FilenameTestsUtils;
-import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
-import org.jenkinsci.plugins.workflow.job.WorkflowJob;
-import org.jenkinsci.plugins.workflow.job.WorkflowRun;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.jvnet.hudson.test.JenkinsRule;
+import static org.junit.jupiter.api.Assertions.*;
 
 import hudson.model.Result;
-
+import java.io.File;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import net.sf.json.JSON;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
 import net.sf.json.JSONSerializer;
+import org.jenkinsci.plugins.pipeline.utility.steps.FilenameTestsUtils;
+import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
+import org.jenkinsci.plugins.workflow.job.WorkflowJob;
+import org.jenkinsci.plugins.workflow.job.WorkflowRun;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
+import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /**
  * Tests for {@link WriteJSONStep}.
  *
  * @author Nikolas Falco
  */
-public class WriteJSONStepTest {
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
-    @Rule
-    public TemporaryFolder temp = new TemporaryFolder();
+@WithJenkins
+class WriteJSONStepTest {
 
-    @Test
-    public void writeFilePretty() throws Exception {
-        File output = temp.newFile();
+    private JenkinsRule j;
 
-        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
-        p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        " def json = readJSON text: '{\"a\": {\"1\": true,\"2\": 2}}' \n" +
-                        " writeJSON file: '" + FilenameTestsUtils.toPath(output) + "', json: json, pretty: 4\n" +
-                        "}", true));
-        j.assertBuildStatusSuccess(p.scheduleBuild2(0));
+    @TempDir
+    private File temp;
 
-        String lines = new String(Files.readAllBytes(Paths.get(output.toURI())), StandardCharsets.UTF_8);
-        assertThat(lines.split("\r\n|\r|\n").length, equalTo(4));
-
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        j = rule;
     }
 
     @Test
-    public void writeFilePrettyEmpty() throws Exception {
-        File output = temp.newFile();
+    void writeFilePretty() throws Exception {
+        File output = File.createTempFile("junit", null, temp);
 
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        " def json = readJSON text: '{}' \n" +
-                        " writeJSON file: '" + FilenameTestsUtils.toPath(output) + "', json: json, pretty: 4\n" +
-                        "}", true));
+                "node {\n" + " def json = readJSON text: '{\"a\": {\"1\": true,\"2\": 2}}' \n"
+                        + " writeJSON file: '"
+                        + FilenameTestsUtils.toPath(output) + "', json: json, pretty: 4\n" + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
 
-        String lines = new String(Files.readAllBytes(Paths.get(output.toURI())), StandardCharsets.UTF_8);
+        String lines = Files.readString(Paths.get(output.toURI()));
+        assertThat(lines.split("\r\n|\r|\n").length, equalTo(4));
+    }
+
+    @Test
+    void writeFilePrettyEmpty() throws Exception {
+        File output = File.createTempFile("junit", null, temp);
+
+        WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
+        p.setDefinition(new CpsFlowDefinition(
+                "node {\n" + " def json = readJSON text: '{}' \n"
+                        + " writeJSON file: '"
+                        + FilenameTestsUtils.toPath(output) + "', json: json, pretty: 4\n" + "}",
+                true));
+        j.assertBuildStatusSuccess(p.scheduleBuild2(0));
+
+        String lines = Files.readString(Paths.get(output.toURI()));
         assertThat(lines.split("\r\n|\r|\n").length, equalTo(1));
     }
 
     @Test
-    public void writeFile() throws Exception {
+    void writeFile() throws Exception {
         int elements = 3;
         String input = getJSON(elements);
-        File output = temp.newFile();
+        File output = File.createTempFile("junit", null, temp);
 
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  def json = readJSON text: '" + input + "'\n" +
-                        "  json[0] = null\n" +
-                        "  json[" + elements + "] = 45\n" +
-                        "  writeJSON file: '" + FilenameTestsUtils.toPath(output) + "', json: json\n" +
-                        "}", true));
+                "node {\n" + "  def json = readJSON text: '"
+                        + input + "'\n" + "  json[0] = null\n"
+                        + "  json["
+                        + elements + "] = 45\n" + "  writeJSON file: '"
+                        + FilenameTestsUtils.toPath(output) + "', json: json\n" + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
 
         // file exists by default so we check that should not be empty
@@ -122,67 +123,70 @@ public class WriteJSONStepTest {
         assertThat(json, instanceOf(JSONArray.class));
 
         JSONArray jsonArray = (JSONArray) json;
-        assertFalse("Saved json is an empty array", jsonArray.isEmpty());
+        assertFalse(jsonArray.isEmpty(), "Saved json is an empty array");
         assertThat(jsonArray.size(), is(elements + 1));
-        assertNotNull("Unexpected element value", jsonArray.get(0));
-        assertEquals("Unexpected element value", 45, jsonArray.get(elements));
+        assertNotNull(jsonArray.get(0), "Unexpected element value");
+        assertEquals(45, jsonArray.get(elements), "Unexpected element value");
     }
 
     @Test
-    public void returnText() throws Exception {
+    void returnText() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  String written = writeJSON returnText: true, json: ['a': 1, 'b': 2] \n" +
-                        "  def json = readJSON text: written, returnPojo: true \n" +
-                        "  assert json == ['a': 1, 'b': 2] \n" +
-                        "}",
+                """
+                        node {
+                          String written = writeJSON returnText: true, json: ['a': 1, 'b': 2]
+                          def json = readJSON text: written, returnPojo: true
+                          assert json == ['a': 1, 'b': 2]
+                        }""",
                 true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void returnTextWithoutNode() throws Exception {
+    void returnTextWithoutNode() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "String written = writeJSON returnText: true, json: ['a': 1, 'b': 2] \n" +
-                "def json = readJSON text: written, returnPojo: true \n" +
-                "assert json == ['a': 1, 'b': 2] \n",
+                """
+                        String written = writeJSON returnText: true, json: ['a': 1, 'b': 2]
+                        def json = readJSON text: written, returnPojo: true
+                        assert json == ['a': 1, 'b': 2]
+                        """,
                 true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void checkRequiredFileOrReturnText() throws Exception {
+    void checkRequiredFileOrReturnText() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  def json = readJSON text: '{}'\n" +
-                        "  writeJSON json: json" +
-                        "}", true));
-        WorkflowRun run = j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
+                """
+                        node {
+                          def json = readJSON text: '{}'
+                          writeJSON json: json\
+                        }""",
+                true));
+        WorkflowRun run =
+                j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
         j.assertLogContains(Messages.WriteJSONStepExecution_missingReturnTextAndFile("writeJSON"), run);
     }
 
     @Test
-    public void checkRequiredJSON() throws Exception {
+    void checkRequiredJSON() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
-        p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  writeJSON file: 'output.json'" +
-                        "}", true));
-        WorkflowRun run = j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
+        p.setDefinition(new CpsFlowDefinition("node {\n" + "  writeJSON file: 'output.json'" + "}", true));
+        WorkflowRun run =
+                j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
         j.assertLogContains(Messages.WriteJSONStepExecution_missingJSON("writeJSON"), run);
     }
 
     @Test
-    public void checkCannotReturnTextAndFile() throws Exception {
+    void checkCannotReturnTextAndFile() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  writeJSON returnText:true, file: 'output.json', json: [foo: 'bar']" +
-                        "}", true));
-        WorkflowRun run = j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
+                "node {\n" + "  writeJSON returnText:true, file: 'output.json', json: [foo: 'bar']" + "}", true));
+        WorkflowRun run =
+                j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
         j.assertLogContains(Messages.WriteJSONStepExecution_bothReturnTextAndFile("writeJSON"), run);
     }
 
@@ -195,5 +199,4 @@ public class WriteJSONStepTest {
         }
         return root.toString();
     }
-
 }
