@@ -24,48 +24,45 @@
 
 package org.jenkinsci.plugins.pipeline.utility.steps.zip;
 
-import hudson.Functions;
+import static org.jenkinsci.plugins.pipeline.utility.steps.FilenameTestsUtils.separatorsToSystemEscaped;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
+
 import hudson.model.Label;
 import hudson.model.Result;
-import hudson.model.queue.QueueTaskFuture;
+import java.io.File;
+import java.net.URL;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import org.jenkinsci.plugins.pipeline.utility.steps.DecompressStepExecution;
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
 import org.jenkinsci.plugins.workflow.steps.StepConfigTester;
-import org.junit.Assume;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-
-import java.io.File;
-import java.io.IOException;
-import java.net.URL;
-import java.net.URLDecoder;
-
-import static org.jenkinsci.plugins.pipeline.utility.steps.FilenameTestsUtils.separatorsToSystemEscaped;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assume.assumeTrue;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /**
  * Tests for {@link UnZipStep}.
  *
  * @author Robert Sandell &lt;rsandell@cloudbees.com&gt;.
  */
-public class UnZipStepTest {
+@WithJenkins
+class UnZipStepTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
+    private JenkinsRule j;
 
-    @Before
-    public void setup() throws Exception {
+    @BeforeEach
+    void setUp(JenkinsRule rule) throws Exception {
+        j = rule;
         j.createOnlineSlave(Label.get("slaves"));
     }
 
     @Test
-    public void configRoundTrip() throws Exception {
+    void configRoundTrip() throws Exception {
         UnZipStep step = new UnZipStep("target/my.zip");
         step.setDir("base/");
         step.setGlob("**/*.zip");
@@ -79,24 +76,26 @@ public class UnZipStepTest {
     }
 
     @Test
-    public void simpleUnZip() throws Exception {
+    void simpleUnZip() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    zip zipFile: '../hello.zip'\n" +
-                        "  }\n" +
-                        "  dir('unzip') {\n" +
-                        "    unzip '../hello.zip'\n" +
-                        "    String txt = readFile 'hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            zip zipFile: '../hello.zip'
+                          }
+                          dir('unzip') {
+                            unzip '../hello.zip'
+                            String txt = readFile 'hello.txt'
+                            echo "Reading: ${txt}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Extracting: hello.txt ->", run);
         j.assertLogContains("Extracting: two/hello.txt ->", run);
@@ -105,26 +104,28 @@ public class UnZipStepTest {
     }
 
     @Test
-    public void globUnZip() throws Exception {
+    void globUnZip() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    zip zipFile: '../hello.zip'\n" +
-                        "  }\n" +
-                        "  dir('unzip') {\n" +
-                        "    unzip zipFile: '../hello.zip', glob: '**/*.txt'\n" +
-                        "    String txt = readFile 'hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "    txt = readFile 'two/hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            zip zipFile: '../hello.zip'
+                          }
+                          dir('unzip') {
+                            unzip zipFile: '../hello.zip', glob: '**/*.txt'
+                            String txt = readFile 'hello.txt'
+                            echo "Reading: ${txt}"
+                            txt = readFile 'two/hello.txt'
+                            echo "Reading: ${txt}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Extracting: hello.txt ->", run);
         j.assertLogContains("Extracting: two/hello.txt ->", run);
@@ -134,20 +135,22 @@ public class UnZipStepTest {
     }
 
     @Test
-    public void globReading() throws Exception {
+    void globReading() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    zip zipFile: '../hello.zip'\n" +
-                        "  }\n" +
-                        "  dir('unzip') {\n" +
-                        "    def txt = unzip zipFile: '../hello.zip', glob: '**/hello.txt', read: true\n" +
-                        "    echo \"Text: ${txt.values().join('\\n')}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            zip zipFile: '../hello.zip'
+                          }
+                          dir('unzip') {
+                            def txt = unzip zipFile: '../hello.zip', glob: '**/hello.txt', read: true
+                            echo "Text: ${txt.values().join('\\n')}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Reading: hello.txt", run);
         j.assertLogNotContains("Reading: hello.dat", run);
@@ -155,21 +158,23 @@ public class UnZipStepTest {
     }
 
     @Test
-    public void globReadingMore() throws Exception {
+    void globReadingMore() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello Data World!'\n" +
-                        "  }\n" +
-                        "  zip zipFile: 'hello.zip', dir: 'zipIt'\n" +
-                        "  dir('unzip') {\n" +
-                        "    def txt = unzip zipFile: '../hello.zip', read: true\n" +
-                        "    echo \"Text: ${txt['hello.txt']}\"\n" +
-                        "    echo \"Text: ${txt['hello.dat']}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello Data World!'
+                          }
+                          zip zipFile: 'hello.zip', dir: 'zipIt'
+                          dir('unzip') {
+                            def txt = unzip zipFile: '../hello.zip', read: true
+                            echo "Text: ${txt['hello.txt']}"
+                            echo "Text: ${txt['hello.dat']}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Reading: hello.txt", run);
         j.assertLogContains("Reading: hello.dat", run);
@@ -178,84 +183,92 @@ public class UnZipStepTest {
     }
 
     @Test
-    public void zipTest() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    void zipTest() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello Data World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    zip zipFile: '../hello.zip'\n" +
-                        "  }\n" +
-                        "  sh 'head -c $(($(cat hello.zip | wc -c) / 2)) hello.zip > corrupt.zip'\n" +
-                        "  def result = unzip zipFile: 'corrupt.zip', test: true \n" +
-                        "  if (result != false)\n" +
-                        "      error('Should be corrupt!')\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello Data World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            zip zipFile: '../hello.zip'
+                          }
+                          sh 'head -c $(($(cat hello.zip | wc -c) / 2)) hello.zip > corrupt.zip'
+                          def result = unzip zipFile: 'corrupt.zip', test: true
+                          if (result != false)
+                              error('Should be corrupt!')
+                        }""",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void testZipTestingBrokenZip() throws Exception {
+    void testZipTestingBrokenZip() throws Exception {
         /*
-         This test uses a prepared zip file that has a single flipped bit inside the byte stream of the zip file entry.
-         The test method has to find this error. This will require the stream to be read, because the CRC check is able
-         to reveal this error.
-         */
+        This test uses a prepared zip file that has a single flipped bit inside the byte stream of the zip file entry.
+        The test method has to find this error. This will require the stream to be read, because the CRC check is able
+        to reveal this error.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("test_broken.zip");
-        String zip = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String zip = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                "  def result = unzip zipFile: '" + separatorsToSystemEscaped(zip) + "', test: true\n" +
-                "  if (result)\n" +
-                "      error('Should be corrupt!')\n" +
-                "}", true));
+                "node {\n" + "  def result = unzip zipFile: '"
+                        + separatorsToSystemEscaped(zip) + "', test: true\n" + "  if (result)\n"
+                        + "      error('Should be corrupt!')\n"
+                        + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void testZipTestingOkayZip() throws Exception {
+    void testZipTestingOkayZip() throws Exception {
         /*
-         This test uses a prepared zip file without any errors.
-         */
+        This test uses a prepared zip file without any errors.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("test_ok.zip");
-        String zip = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String zip = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                "  def result = unzip zipFile: '" + separatorsToSystemEscaped(zip) + "', test: true\n" +
-                "  if (!result)\n" +
-                "      error('Should be okay!')\n" +
-                "}", true));
+                "node {\n" + "  def result = unzip zipFile: '"
+                        + separatorsToSystemEscaped(zip) + "', test: true\n" + "  if (!result)\n"
+                        + "      error('Should be okay!')\n"
+                        + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void unzipQuiet() throws Exception {
+    void unzipQuiet() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    zip zipFile: '../hello.zip'\n" +
-                        "  }\n" +
-                        "  dir('unzip') {\n" +
-                        "    unzip zipFile: '../hello.zip', quiet: true\n" +
-                        "    String txt = readFile 'hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "    txt = readFile 'two/hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            zip zipFile: '../hello.zip'
+                          }
+                          dir('unzip') {
+                            unzip zipFile: '../hello.zip', quiet: true
+                            String txt = readFile 'hello.txt'
+                            echo "Reading: ${txt}"
+                            txt = readFile 'two/hello.txt'
+                            echo "Reading: ${txt}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogNotContains("Extracting: hello.txt ->", run);
         j.assertLogNotContains("Extracting: two/hello.txt ->", run);
@@ -266,20 +279,22 @@ public class UnZipStepTest {
     }
 
     @Test
-    public void unzipQuietReading() throws Exception {
+    void unzipQuietReading() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('zipIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    zip zipFile: '../hello.zip'\n" +
-                        "  }\n" +
-                        "  dir('unzip') {\n" +
-                        "    def txt = unzip zipFile: '../hello.zip', quiet: true, read: true\n" +
-                        "    echo \"Text: ${txt.values().join('\\n')}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('zipIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            zip zipFile: '../hello.zip'
+                          }
+                          dir('unzip') {
+                            def txt = unzip zipFile: '../hello.zip', quiet: true, read: true
+                            echo "Text: ${txt.values().join('\\n')}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogNotContains("Reading: hello.txt", run);
         j.assertLogNotContains("Reading: hello.dat", run);
@@ -287,43 +302,49 @@ public class UnZipStepTest {
         j.assertLogContains("Text: Hello World!", run);
     }
 
-    @Test @Issue("SECURITY-2196")
-    public void unZipMaliciousFailsTheTest() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    @Test
+    @Issue("SECURITY-2196")
+    void unZipMaliciousFailsTheTest() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         /*
-         This test uses a prepared zip file with a malicious payload.
-         */
+        This test uses a prepared zip file with a malicious payload.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("malicious.zip");
-        String zip = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String zip = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  def result = unzip zipFile: '" + separatorsToSystemEscaped(zip) + "', test: true\n" +
-                        "  if (result)\n" +
-                        "      error('Should be failed!')\n" +
-                        "}", true));
+                "node {\n" + "  def result = unzip zipFile: '"
+                        + separatorsToSystemEscaped(zip) + "', test: true\n" + "  if (result)\n"
+                        + "      error('Should be failed!')\n"
+                        + "}",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("is out of bounds!", run);
     }
 
-    @Test @Issue("SECURITY-2196")
-    public void unZipMaliciousDoesNotFailTheTestWithEscapeHath() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    @Test
+    @Issue("SECURITY-2196")
+    void unZipMaliciousDoesNotFailTheTestWithEscapeHath() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         try {
             DecompressStepExecution.ALLOW_EXTRACTION_OUTSIDE_DESTINATION = true;
-        /*
-         This test uses a prepared zip file with a malicious payload.
-         */
+            /*
+            This test uses a prepared zip file with a malicious payload.
+            */
             j.createOnlineSlave(Label.get("bbb"));
             WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
             URL resource = getClass().getResource("malicious.zip");
-            String zip = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+            String zip = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                    .getAbsolutePath()
+                    .replace('\\', '/');
             p.setDefinition(new CpsFlowDefinition(
-                    "node('bbb') {\n" +
-                            "  def result = unzip zipFile: '" + separatorsToSystemEscaped(zip) + "', test: true\n" +
-                            "  if (!result)\n" +
-                            "      error('Should not fail!')\n" +
-                            "}", true));
+                    "node('bbb') {\n" + "  def result = unzip zipFile: '"
+                            + separatorsToSystemEscaped(zip) + "', test: true\n" + "  if (!result)\n"
+                            + "      error('Should not fail!')\n"
+                            + "}",
+                    true));
             WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
             j.assertLogNotContains("is out of bounds!", run);
         } finally {
@@ -331,19 +352,20 @@ public class UnZipStepTest {
         }
     }
 
-    @Test @Issue("SECURITY-2196")
-    public void unZipMaliciousFailsTheBuild() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    @Test
+    @Issue("SECURITY-2196")
+    void unZipMaliciousFailsTheBuild() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         /*
-         This test uses a prepared zip file with a malicious payload.
-         */
+        This test uses a prepared zip file with a malicious payload.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("malicious.zip");
-        String zip = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String zip = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  unzip zipFile: '" + separatorsToSystemEscaped(zip) + "'\n" +
-                        "}", true));
+                "node {\n" + "  unzip zipFile: '" + separatorsToSystemEscaped(zip) + "'\n" + "}", true));
         WorkflowRun run = j.buildAndAssertStatus(Result.FAILURE, p);
         j.assertLogContains("is out of bounds!", run);
     }
